<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/FloralWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/d"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/main_logo"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/songs"
            android:textColor="@color/BlueViolet"
            android:textSize="48sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    <TextView
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:id="@+id/song1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/Red"
        android:gravity="center"
        android:text="@string/song1"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:id="@+id/song2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/Orange"
        android:gravity="center"
        android:text="@string/song2"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/song3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginBottom="16dp"
        android:background="@color/Yellow"
        android:gravity="center"
        android:text="@string/song3"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/song4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginBottom="16dp"
        android:background="@color/ForestGreen"
        android:gravity="center"
        android:text="@string/song4"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/song5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginBottom="16dp"
        android:background="@color/DodgerBlue"
        android:gravity="center"
        android:text="@string/song5"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/song6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginBottom="16dp"
        android:background="@color/MediumPurple"
        android:gravity="center"
        android:text="@string/song6"
        android:textSize="24sp" />


</LinearLayout>
</ScrollView>