<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FloralWhite"
    >
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.cairod_church.pamphlet.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/main_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/logo_main"
            android:textColor="@color/BlueViolet"
            android:textSize="48sp"
            android:textStyle="bold"

            android:layout_gravity="center" />
    </LinearLayout>

    <TextView
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:id="@+id/daily_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/Red"
        android:gravity="center"
        android:text="@string/daily"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/Orange"
        android:gravity="center"
        android:text="@string/logo"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/songs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginBottom="16dp"
        android:background="@color/Yellow"
        android:gravity="center"
        android:text="@string/songs"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/santContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginBottom="16dp"
        android:background="@color/GreenYellow"
        android:gravity="center"
        android:text="@string/sanctum"
        android:textSize="24sp"/>
    <TextView
        android:textStyle="bold"
        android:id="@+id/workgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginBottom="16dp"
        android:background="@color/ForestGreen"
        android:gravity="center"
        android:text="@string/workgroup"
        android:textSize="24sp" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:layout_marginBottom="16dp"
        android:background="@color/DodgerBlue"
        android:gravity="center"
        android:text="@string/upcomingevents"
        android:textSize="24sp" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<ImageButton
    android:id="@+id/facebook"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:src="@drawable/facebookbutton"
    />

    <ImageButton
        android:id="@+id/survey"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/opinion"
         />
</LinearLayout>
</LinearLayout>
</ScrollView>