<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/topics"
        android:textColor="@color/BlueViolet"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_gravity="center" />



    <TextView
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:id="@+id/relation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/IndianRed"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/relations"
        android:textSize="32sp" />

    <TextView
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:id="@+id/bound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/RosyBrown"
        android:gravity="center"
        android:text="@string/boundries"
        android:textSize="32sp" />


</LinearLayout>