<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FloralWhite"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    tools:context="org.cairod_church.pamphlet.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/youth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/main_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/logo_main"
        android:textColor="@color/BlueViolet"
        android:textSize="64sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/pamphlet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/app_name" />

</LinearLayout>
