<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_bible"
        android:textSize="56sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_marginBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bible1"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_marginBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
    <TextView
        android:layout_marginBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bible2.3"
        android:textSize="32sp"
        android:textStyle="bold"
         android:layout_gravity="center"
         />
        <TextView
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bible2.2"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <TextView

            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bible2.1"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bible2"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

    </LinearLayout>
    <TextView
        android:layout_marginBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bible3"
        android:textSize="56sp"
        android:textStyle="bold"
        android:layout_gravity="center" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/slave"
        android:layout_weight="1"
        android:layout_gravity="center"
        />
</LinearLayout>
    </ScrollView>